lisa: Enable subtle tick vibration when revealing shelf
The stock ROM enables this because our vibrator supports subtle "tick"
vibration effects. Enable it in our device tree as well to make pulling
down the notification shade/QS panel feel slightly more interactive.

Change-Id: I0c160694bd9616c8693a659da8db9cf4e59ba4c3
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -40,4 +40,8 @@
     
     <!-- Burn in protection -->
     <bool name="config_statusBarBurnInProtection">true</bool>
+    
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
