lisa: Migrate "rounded_corner_content_padding"
With my previous CL [1], we can override

   rounded_corner_content_padding

at the Framework resource layer rather than the SysUI resource layer.

No matter whether

  persist.sys.ime.can_render_gestural_nav_buttons

is enabled or not, there should be no observable behavior change in
this CL.

 [1]: I0c3717c0bdfc928167c6eba06247b37caabf33b9
      24d6b891f572f7be419d3acc9793ca68d062cf35

Bug: 215554582
Test: Manually verified as follows.
  1. Build aosp_coral-userdebug and flash it
  2. adb shell cmd overlay lookup android \
       android:dimen/rounded_corner_content_padding
     -> 70.0px
  3. adb shell cmd overlay lookup com.android.systemui \
       com.android.systemui:dimen/rounded_corner_content_padding
     -> 70.0px
Change-Id: I391a504482f25c17f9b67f7eb8f56f362da71ae0

--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -14,6 +14,9 @@
          Use {@link SystemBarUtils#getStatusBarHeight} instead. -->
     <dimen name="status_bar_height_portrait">110px</dimen>
 
+    <!-- the padding of the rounded corner -->
+    <dimen name="rounded_corner_content_padding">16dp</dimen>
+
     <!-- Radius of the software rounded corners at the top of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_top">102px</dimen>
